<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tea Timer</string>
	<string name="Start">Set Timer</string>
	<string name="Stop">Clear</string>

	<string name="Notification">Tea time!</string>
	<string name="InputTitle">Hour:Min:Sec</string>

	<string name="warning_text">The phone is in silent mode! Notification vibration and sound will be suppressed.</string>
	<string name="warning_title">Warning</string>
	<string name="warning_button">Ok</string>
	
	<string name="timer_for">"Timer for "</string>
	
	<string name="prefs">Preferences</string>
	
	<!-- Preferences -->
	<string name="notification">Notification</string>
	<string name="notification_sound">Notification Diddy</string>
	<string name="notification_sound_desc">The notification\'s sound effects.</string>
	<string name="notification_default">System default</string>
	<string name="notification_no_sound">No sound</string>
		
	<string name="notification_vibrate">Notification Vibrate</string>
	<string name="notification_vibrate_desc">Should the timer notification Vibrate.</string>
	
	<string name="led_Notification">LED Notification</string>
	<string name="led_Notification_desc">Blink the LED lights during the notification.</string>

	<string name="auto_clear">Clear automatically</string>
	<string name="auto_clear_desc">Clear notification automatically after a few seconds.</string>
	
	<string name="visual">Visual</string>
	
	<string name="color_theme">Color Theme</string>
	<string name="color_theme_desc">Select the theme for the visualization</string>
	
	<string name="misc">Misc</string>
	
	<string name="nag_dialog">Nag Dialog</string>
	<string name="nag_dialog_desc">When the phone is set to silent show a nag dialog.</string>
	
	<string name="stay_awake">Stay awake</string>
	<string name="stay_awake_desc">Don\'t allow the phone to go to sleep.</string>

	<string name="repeat_rate">Repeat rate</string>
	<string name="repeat_rate_desc">Button repeats per second on long press in the number picker.</string>
	
	<!-- About -->
	<string name="close">Close</string>
	<string name="about">About</string>
	<string name="about_website">Tea Timer on Github</string>
	<string name="about_title">About Tea Timer</string>
	<string name="about_details_desc">TeaTimer will help you make sure your tea is there on time, not too early, not too late.\n\nTea Timer is a free software (as in free speech, not as in free beer), you can also use it for your spaghetti.</string>
	<string name="about_details_licence">TeaTimer is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.</string>
	<string name="about_details_url">http://www.gnu.org/licenses/gpl.html</string>
	<string name="about_site">Get the latest version of the source code on Github.</string>
	<string name="about_site_url">https://github.com/ralphleon/TeaTimer</string>
		
	
	
		
</resources>


