<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2011 Djiko <gilles+android@coulais.net>

This file is part of the Android TeaTimer Application.

Licensed under the GNU GPL, Version 3.0 (the "License");

TODO  : Adapter le texte de la licence 

-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	
	<LinearLayout 	android:layout_width="fill_parent" android:layout_height="fill_parent" 
					android:orientation="vertical"
					android:paddingLeft="5dip" 
					android:paddingRight="5dip" >
		
			<TextView 		android:layout_width="fill_parent" android:layout_height="fill_parent" 
							android:layout_gravity="center"
							android:id="@+id/about_title"
		 					android:textSize="20dip" />
			<TextView 		android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="12dip" 
							android:text="@string/about_details_desc"
							android:layout_marginTop="5dip"
							android:layout_marginBottom="10dip" />
			<TextView 		android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="12dip" 
							android:text="@string/about_details_licence" 
							android:layout_marginTop="10dip" />
			<TextView 		android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="12dip" 
							android:text="@string/about_details_url"
							android:paddingBottom="5dip" 
							android:autoLink="web" />
			<TextView 		android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="12dip" 
							android:text="@string/about_site" 
							android:layout_marginTop="5dip" />
			<TextView 		android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="12dip" 
							android:text="@string/about_site_url"
							android:paddingBottom="5dip" 
							android:autoLink="web" />
							
	</LinearLayout>	
	
</ScrollView>